FICO-019＆026_長期滞在＆低価法レポート 20241203

--- a/fico-s4apps01/zinventoryaging/webapp/view/Main.view.xml
+++ b/fico-s4apps01/zinventoryaging/webapp/view/Main.view.xml
@@ -36,7 +36,7 @@
 
                                 <!-- visible -->
                                 <smartFilterBar:ControlConfiguration index='999' key="Plant" visible="false"/>
-                                <smartFilterBar:ControlConfiguration index='999' key="product" visible="false"/>
+                                <smartFilterBar:ControlConfiguration index='999' key="Product" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="ProductDescription" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="ProductType" visible="false"/>
                                 <smartFilterBar:ControlConfiguration index='999' key="ProductTypeName" visible="false"/>
