購買情報マスタ一覧 恢复版本

--- a/mm-s4apps01/purinfomasterlist/webapp/view/Main.view.xml
+++ b/mm-s4apps01/purinfomasterlist/webapp/view/Main.view.xml
@@ -536,7 +536,7 @@
 								<Label text="{i18n>Rate}"/>
 							</table:label>
 							<table:template>
-								<Label text="{rate}"/>
+								<Label text="{Rate}"/>
 							</table:template>
 						</table:Column>
 
